--- a/AiFileDetector_2024/UI_Design/new.ui
+++ b/AiFileDetector_2024/UI_Design/new.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>820</width>
-    <height>676</height>
+    <width>955</width>
+    <height>737</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -66,7 +66,7 @@ QTabBar::tab:hover {
 </string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <property name="iconSize">
      <size>
@@ -83,7 +83,7 @@ QTabBar::tab:hover {
        <rect>
         <x>10</x>
         <y>40</y>
-        <width>761</width>
+        <width>351</width>
         <height>251</height>
        </rect>
       </property>
@@ -108,8 +108,8 @@ QHeaderView::section {
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>375</x>
-        <y>300</y>
+        <x>380</x>
+        <y>150</y>
         <width>50</width>
         <height>40</height>
        </rect>
@@ -141,9 +141,9 @@ QPushButton:pressed {
      <widget class="QListWidget" name="listWidget">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>350</y>
-        <width>761</width>
+        <x>440</x>
+        <y>40</y>
+        <width>331</width>
         <height>250</height>
        </rect>
       </property>
@@ -171,6 +171,51 @@ QListWidget {
        <string notr="true">background-color: rgb(236, 229, 225);</string>
       </property>
      </widget>
+     <widget class="QTableWidget" name="tableWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>310</y>
+        <width>761</width>
+        <height>231</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QTreeView {
+  background-color: rgb(45, 48, 56);
+  color: rgb(255, 255, 255);  /* 글자색을 흰색으로 변경 */
+  border: 1px solid rgb(80, 80, 80);
+  font: 9pt &quot;Playfair Display&quot;;
+}
+
+QTableView::item {
+  color: rgb(255, 255, 255);  /* 표 안의 아이템 글자색을 흰색으로 변경 */
+}
+
+QHeaderView::section {
+  background-color: rgb(58, 60, 69);
+  color: rgb(200, 200, 200);
+  border-bottom: 1px solid rgb(80, 80, 80);
+  padding: 4px;
+}</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>170</x>
+        <y>10</y>
+        <width>491</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color:rgb(255, 210, 76);</string>
+      </property>
+      <property name="text">
+       <string>학습데이터 생성 시 영상 파일 선택, 학습 시 csv 파일 선택</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab2">
      <attribute name="title">
@@ -179,8 +224,8 @@ QListWidget {
      <widget class="QPushButton" name="feature_create1">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>20</y>
+        <x>120</x>
+        <y>130</y>
         <width>160</width>
         <height>40</height>
        </rect>
@@ -212,8 +257,8 @@ QPushButton:pressed {
      <widget class="QPushButton" name="create_value2">
       <property name="geometry">
        <rect>
-        <x>200</x>
-        <y>20</y>
+        <x>300</x>
+        <y>130</y>
         <width>160</width>
         <height>40</height>
        </rect>
@@ -245,8 +290,8 @@ QPushButton:pressed {
      <widget class="QPushButton" name="create_sequence3">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>20</y>
+        <x>480</x>
+        <y>130</y>
         <width>160</width>
         <height>40</height>
        </rect>
@@ -278,10 +323,10 @@ QPushButton:pressed {
      <widget class="QPushButton" name="LoadButton">
       <property name="geometry">
        <rect>
-        <x>560</x>
-        <y>20</y>
-        <width>160</width>
-        <height>40</height>
+        <x>650</x>
+        <y>185</y>
+        <width>101</width>
+        <height>31</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -311,9 +356,9 @@ QPushButton:pressed {
      <widget class="QProgressBar" name="progress_bar">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>80</y>
-        <width>700</width>
+        <x>120</x>
+        <y>190</y>
+        <width>511</width>
         <height>25</height>
        </rect>
       </property>
@@ -338,31 +383,184 @@ QProgressBar::chunk {
        <number>0</number>
       </property>
      </widget>
-     <widget class="QTreeView" name="treeView_2">
+     <widget class="QRadioButton" name="mulButton">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>120</y>
-        <width>701</width>
-        <height>401</height>
+        <x>10</x>
+        <y>30</y>
+        <width>90</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>multi class</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="binButton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>90</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>binary class</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="model_combo">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>355</y>
+        <width>231</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);
+font: 9pt &quot;Helvetica&quot;;</string>
+      </property>
+      <item>
+       <property name="text">
+        <string>Xgboost</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>LSTM</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Random forest</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>LightGBM</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Linear</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>KNN</string>
+       </property>
+      </item>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>320</y>
+        <width>171</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 16pt &quot;Arial&quot;;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Training Model</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="class_train">
+      <property name="geometry">
+       <rect>
+        <x>359</x>
+        <y>350</y>
+        <width>271</width>
+        <height>40</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">
-QTreeView {
-  background-color: rgb(45, 48, 56);
-  color: rgb(230, 230, 230);
-  border: 1px solid rgb(80, 80, 80);
-  font: 9pt &quot;Playfair Display&quot;;
+QPushButton {
+  background-color: rgb(212, 175, 55);  /* Gold color */
+  color: rgb(35, 37, 42);
+  font: bold 10pt &quot;Playfair Display&quot;;
+  border-radius: 8px;
+  padding: 10px;
 }
 
-QHeaderView::section {
-  background-color: rgb(58, 60, 69);
-  color: rgb(200, 200, 200);
-  border-bottom: 1px solid rgb(80, 80, 80);
-  padding: 4px;
+QPushButton:hover {
+  background-color: rgb(183, 149, 11);
+}
+
+QPushButton:pressed {
+  background-color: rgb(212, 175, 55);
+  border: 1px solid rgb(160, 130, 0);
 }
 </string>
+      </property>
+      <property name="text">
+       <string>분류모델</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="cluster_train">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>400</y>
+        <width>511</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">
+QPushButton {
+  background-color: rgb(212, 175, 55);  /* Gold color */
+  color: rgb(35, 37, 42);
+  font: bold 10pt &quot;Playfair Display&quot;;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+QPushButton:hover {
+  background-color: rgb(183, 149, 11);
+}
+
+QPushButton:pressed {
+  background-color: rgb(212, 175, 55);
+  border: 1px solid rgb(160, 130, 0);
+}
+</string>
+      </property>
+      <property name="text">
+       <string>클러스터링</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>100</y>
+        <width>171</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 16pt &quot;Arial&quot;;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Create Dataset</string>
       </property>
      </widget>
     </widget>
@@ -373,7 +571,7 @@ QHeaderView::section {
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>820</width>
+     <width>955</width>
      <height>22</height>
     </rect>
    </property>
