--- a/AiFileDetector_2024/UI_Design/new.ui
+++ b/AiFileDetector_2024/UI_Design/new.ui
@@ -219,13 +219,30 @@ QHeaderView::section {
     </widget>
     <widget class="QWidget" name="tab2">
      <attribute name="title">
-      <string>Actions</string>
+      <string>Create</string>
      </attribute>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>75</y>
+        <width>171</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 16pt &quot;Arial&quot;;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>Create Dataset</string>
+      </property>
+     </widget>
      <widget class="QPushButton" name="feature_create1">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>130</y>
+        <x>110</x>
+        <y>105</y>
         <width>160</width>
         <height>40</height>
        </rect>
@@ -257,8 +274,8 @@ QPushButton:pressed {
      <widget class="QPushButton" name="create_value2">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>130</y>
+        <x>290</x>
+        <y>105</y>
         <width>160</width>
         <height>40</height>
        </rect>
@@ -290,8 +307,8 @@ QPushButton:pressed {
      <widget class="QPushButton" name="create_sequence3">
       <property name="geometry">
        <rect>
-        <x>480</x>
-        <y>130</y>
+        <x>470</x>
+        <y>105</y>
         <width>160</width>
         <height>40</height>
        </rect>
@@ -323,8 +340,8 @@ QPushButton:pressed {
      <widget class="QPushButton" name="LoadButton">
       <property name="geometry">
        <rect>
-        <x>650</x>
-        <y>185</y>
+        <x>640</x>
+        <y>160</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -356,8 +373,8 @@ QPushButton:pressed {
      <widget class="QProgressBar" name="progress_bar">
       <property name="geometry">
        <rect>
-        <x>120</x>
-        <y>190</y>
+        <x>110</x>
+        <y>165</y>
         <width>511</width>
         <height>25</height>
        </rect>
@@ -419,6 +436,66 @@ color: rgb(255, 255, 255);</string>
        <string>binary class</string>
       </property>
      </widget>
+     <widget class="QWidget" name="verticalLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>290</y>
+        <width>231</width>
+        <height>271</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Select Frame Feature</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="mulButton_3">
+         <property name="styleSheet">
+          <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>SPS/PPS</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="mulButton_2">
+         <property name="styleSheet">
+          <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>GOP frame</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QRadioButton" name="mulButton_4">
+         <property name="styleSheet">
+          <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>Encode ratio</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Train</string>
+     </attribute>
      <widget class="QComboBox" name="model_combo">
       <property name="geometry">
        <rect>
@@ -544,77 +621,6 @@ QPushButton:pressed {
       </property>
       <property name="text">
        <string>클러스터링</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_2">
-      <property name="geometry">
-       <rect>
-        <x>120</x>
-        <y>100</y>
-        <width>171</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 16pt &quot;Arial&quot;;
-color: rgb(255, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>Create Dataset</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="mulButton_2">
-      <property name="geometry">
-       <rect>
-        <x>670</x>
-        <y>10</y>
-        <width>90</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 10pt &quot;Helvetica&quot;;
-style: bold;
-color: rgb(255, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>GOP frame</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="mulButton_3">
-      <property name="geometry">
-       <rect>
-        <x>670</x>
-        <y>30</y>
-        <width>90</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 10pt &quot;Helvetica&quot;;
-style: bold;
-color: rgb(255, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>SPS/PPS</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="mulButton_4">
-      <property name="geometry">
-       <rect>
-        <x>570</x>
-        <y>10</y>
-        <width>90</width>
-        <height>16</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 10pt &quot;Helvetica&quot;;
-style: bold;
-color: rgb(255, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string>SPS/PPS</string>
       </property>
      </widget>
     </widget>
