--- a/AiFileDetector_2024/UI_Design/new.ui
+++ b/AiFileDetector_2024/UI_Design/new.ui
@@ -66,7 +66,7 @@ QTabBar::tab:hover {
 </string>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <property name="iconSize">
      <size>
@@ -83,7 +83,7 @@ QTabBar::tab:hover {
        <rect>
         <x>10</x>
         <y>40</y>
-        <width>351</width>
+        <width>421</width>
         <height>251</height>
        </rect>
       </property>
@@ -108,7 +108,7 @@ QHeaderView::section {
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>450</x>
         <y>150</y>
         <width>50</width>
         <height>40</height>
@@ -141,9 +141,9 @@ QPushButton:pressed {
      <widget class="QListWidget" name="listWidget">
       <property name="geometry">
        <rect>
-        <x>440</x>
+        <x>520</x>
         <y>40</y>
-        <width>331</width>
+        <width>251</width>
         <height>250</height>
        </rect>
       </property>
@@ -440,21 +440,84 @@ color: rgb(255, 255, 255);</string>
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>290</y>
-        <width>231</width>
-        <height>271</height>
+        <y>350</y>
+        <width>243</width>
+        <height>81</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
-        <widget class="QLabel" name="label_4">
+        <widget class="QCheckBox" name="structure_val_but">
+         <property name="styleSheet">
+          <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+         </property>
          <property name="text">
-          <string>Select Frame Feature</string>
+          <string>Structure value</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QRadioButton" name="mulButton_3">
+        <widget class="QCheckBox" name="structure_seq_but">
+         <property name="styleSheet">
+          <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+         </property>
+         <property name="text">
+          <string>Structure Sequence</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>310</y>
+        <width>241</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 700 15pt &quot;Arial&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Select Structure Feature</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>310</y>
+        <width>241</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255, 255, 255);
+font: 700 15pt &quot;Arial&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Select Frame Feature</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="verticalLayoutWidget_3">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>350</y>
+        <width>243</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout_3">
+       <item>
+        <widget class="QCheckBox" name="frame_sps_but">
          <property name="styleSheet">
           <string notr="true">font: 10pt &quot;Helvetica&quot;;
 style: bold;
@@ -466,7 +529,7 @@ color: rgb(255, 255, 255);</string>
         </widget>
        </item>
        <item>
-        <widget class="QRadioButton" name="mulButton_2">
+        <widget class="QCheckBox" name="frame_gop_but">
          <property name="styleSheet">
           <string notr="true">font: 10pt &quot;Helvetica&quot;;
 style: bold;
@@ -478,7 +541,7 @@ color: rgb(255, 255, 255);</string>
         </widget>
        </item>
        <item>
-        <widget class="QRadioButton" name="mulButton_4">
+        <widget class="QCheckBox" name="frame_ratio_but">
          <property name="styleSheet">
           <string notr="true">font: 10pt &quot;Helvetica&quot;;
 style: bold;
@@ -500,7 +563,7 @@ color: rgb(255, 255, 255);</string>
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>355</y>
+        <y>80</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -544,7 +607,7 @@ font: 9pt &quot;Helvetica&quot;;</string>
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>320</y>
+        <y>45</y>
         <width>171</width>
         <height>16</height>
        </rect>
@@ -561,7 +624,7 @@ color: rgb(255, 255, 255);</string>
       <property name="geometry">
        <rect>
         <x>359</x>
-        <y>350</y>
+        <y>75</y>
         <width>271</width>
         <height>40</height>
        </rect>
@@ -594,7 +657,7 @@ QPushButton:pressed {
       <property name="geometry">
        <rect>
         <x>120</x>
-        <y>400</y>
+        <y>125</y>
         <width>511</width>
         <height>40</height>
        </rect>
