--- a/AiFileDetector_2024/UI_Design/new.ui
+++ b/AiFileDetector_2024/UI_Design/new.ui
@@ -66,7 +66,7 @@ QTabBar::tab:hover {
 </string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>3</number>
     </property>
     <property name="iconSize">
      <size>
@@ -751,7 +751,7 @@ font: 9pt &quot;Helvetica&quot;;</string>
        </property>
       </item>
      </widget>
-     <widget class="QPushButton" name="class_train_2">
+     <widget class="QPushButton" name="class_detect">
       <property name="geometry">
        <rect>
         <x>369</x>
