--- a/AiFileDetector_2024/UI_Design/new.ui
+++ b/AiFileDetector_2024/UI_Design/new.ui
@@ -702,6 +702,105 @@ QPushButton:pressed {
        <string>클러스터링</string>
       </property>
      </widget>
+     <widget class="QRadioButton" name="binButton_3">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>180</y>
+        <width>90</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>binary class</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="mulButton_3">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>200</y>
+        <width>90</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 10pt &quot;Helvetica&quot;;
+style: bold;
+color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string>multi class</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="label_info">
+      <property name="geometry">
+       <rect>
+        <x>670</x>
+        <y>550</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">
+QPushButton {
+  
+	background-color: rgb(255, 254, 233);
+  color: rgb(35, 37, 42);
+  font: bold 10pt &quot;Playfair Display&quot;;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+QPushButton:hover {
+  background-color: rgb(183, 149, 11);
+}
+
+QPushButton:pressed {
+  background-color: rgb(212, 175, 55);
+  border: 1px solid rgb(160, 130, 0);
+}
+</string>
+      </property>
+      <property name="text">
+       <string>Label Info</string>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="tableWidget_train">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>250</y>
+        <width>411</width>
+        <height>231</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QTreeView {
+  background-color: rgb(45, 48, 56);
+  color: rgb(255, 255, 255);  /* 글자색을 흰색으로 변경 */
+  border: 1px solid rgb(80, 80, 80);
+  font: 9pt &quot;Playfair Display&quot;;
+}
+
+QTableView::item {
+  color: rgb(255, 255, 255);  /* 표 안의 아이템 글자색을 흰색으로 변경 */
+}
+
+QHeaderView::section {
+  background-color: rgb(58, 60, 69);
+  color: rgb(200, 200, 200);
+  border-bottom: 1px solid rgb(80, 80, 80);
+  padding: 4px;
+}</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
@@ -710,8 +809,8 @@ QPushButton:pressed {
      <widget class="QComboBox" name="model_combo_2">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>95</y>
+        <x>120</x>
+        <y>80</y>
         <width>231</width>
         <height>31</height>
        </rect>
@@ -754,8 +853,8 @@ font: 9pt &quot;Helvetica&quot;;</string>
      <widget class="QPushButton" name="class_detect">
       <property name="geometry">
        <rect>
-        <x>369</x>
-        <y>90</y>
+        <x>359</x>
+        <y>75</y>
         <width>271</width>
         <height>40</height>
        </rect>
@@ -787,8 +886,8 @@ QPushButton:pressed {
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>60</y>
+        <x>120</x>
+        <y>45</y>
         <width>171</width>
         <height>16</height>
        </rect>
@@ -804,8 +903,8 @@ color: rgb(255, 255, 255);</string>
      <widget class="QRadioButton" name="binButton_2">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>140</y>
+        <x>120</x>
+        <y>125</y>
         <width>90</width>
         <height>16</height>
        </rect>
@@ -822,8 +921,8 @@ color: rgb(255, 255, 255);</string>
      <widget class="QRadioButton" name="mulButton_2">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>160</y>
+        <x>120</x>
+        <y>145</y>
         <width>90</width>
         <height>16</height>
        </rect>
@@ -835,6 +934,35 @@ color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>multi class</string>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="tableWidget_detect">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>220</y>
+        <width>411</width>
+        <height>231</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QTreeView {
+  background-color: rgb(45, 48, 56);
+  color: rgb(255, 255, 255);  /* 글자색을 흰색으로 변경 */
+  border: 1px solid rgb(80, 80, 80);
+  font: 9pt &quot;Playfair Display&quot;;
+}
+
+QTableView::item {
+  color: rgb(255, 255, 255);  /* 표 안의 아이템 글자색을 흰색으로 변경 */
+}
+
+QHeaderView::section {
+  background-color: rgb(58, 60, 69);
+  color: rgb(200, 200, 200);
+  border-bottom: 1px solid rgb(80, 80, 80);
+  padding: 4px;
+}</string>
       </property>
      </widget>
     </widget>
