--- a/AiFileDetector_2024/new.ui
+++ b/AiFileDetector_2024/new.ui
@@ -22,7 +22,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>800</width>
+      <width>831</width>
       <height>650</height>
      </rect>
     </property>
@@ -245,7 +245,7 @@ QHeaderView::section {
        <string notr="true">color:rgb(255, 210, 76);</string>
       </property>
       <property name="text">
-       <string>로드된 CSV 파일명</string>
+       <string/>
       </property>
      </widget>
     </widget>
@@ -270,45 +270,12 @@ color: rgb(255, 255, 255);</string>
        <string>Create Dataset</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="feature_create1">
-      <property name="geometry">
-       <rect>
-        <x>60</x>
-        <y>110</y>
-        <width>160</width>
-        <height>40</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">
-QPushButton {
-  background-color: rgb(212, 175, 55);  /* Gold color */
-  color: rgb(35, 37, 42);
-  font: bold 10pt &quot;Playfair Display&quot;;
-  border-radius: 8px;
-  padding: 10px;
-}
-
-QPushButton:hover {
-  background-color: rgb(183, 149, 11);
-}
-
-QPushButton:pressed {
-  background-color: rgb(212, 175, 55);
-  border: 1px solid rgb(160, 130, 0);
-}
-</string>
-      </property>
-      <property name="text">
-       <string>Create Feature</string>
-      </property>
-     </widget>
      <widget class="QPushButton" name="create_value2">
       <property name="geometry">
        <rect>
-        <x>240</x>
+        <x>70</x>
         <y>110</y>
-        <width>160</width>
+        <width>251</width>
         <height>40</height>
        </rect>
       </property>
@@ -334,39 +301,6 @@ QPushButton:pressed {
       </property>
       <property name="text">
        <string>Create Dataset</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="create_sequence3">
-      <property name="geometry">
-       <rect>
-        <x>420</x>
-        <y>110</y>
-        <width>160</width>
-        <height>40</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">
-QPushButton {
-  background-color: rgb(212, 175, 55);
-  color: rgb(35, 37, 42);
-  font: bold 10pt &quot;Playfair Display&quot;;
-  border-radius: 8px;
-  padding: 10px;
-}
-
-QPushButton:hover {
-  background-color: rgb(183, 149, 11);
-}
-
-QPushButton:pressed {
-  background-color: rgb(212, 175, 55);
-  border: 1px solid rgb(160, 130, 0);
-}
-</string>
-      </property>
-      <property name="text">
-       <string>Create Sequence</string>
       </property>
      </widget>
      <widget class="QPushButton" name="LoadButton">
@@ -405,9 +339,9 @@ QPushButton:pressed {
      <widget class="QProgressBar" name="progress_bar">
       <property name="geometry">
        <rect>
-        <x>60</x>
+        <x>70</x>
         <y>170</y>
-        <width>511</width>
+        <width>501</width>
         <height>25</height>
        </rect>
       </property>
@@ -524,7 +458,7 @@ font: 700 15pt &quot;Arial&quot;;</string>
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>410</x>
+        <x>340</x>
         <y>225</y>
         <width>241</width>
         <height>21</height>
@@ -541,7 +475,7 @@ font: 700 15pt &quot;Arial&quot;;</string>
      <widget class="QWidget" name="verticalLayoutWidget_3">
       <property name="geometry">
        <rect>
-        <x>410</x>
+        <x>340</x>
         <y>265</y>
         <width>243</width>
         <height>81</height>
@@ -652,10 +586,10 @@ QHeaderView::section {
      <widget class="QPushButton" name="exist_csv_but">
       <property name="geometry">
        <rect>
-        <x>240</x>
-        <y>70</y>
-        <width>161</width>
-        <height>31</height>
+        <x>330</x>
+        <y>110</y>
+        <width>241</width>
+        <height>41</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -680,6 +614,39 @@ QPushButton:pressed {
       </property>
       <property name="text">
        <string>기존 학습데이터에 추가</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="stateButton">
+      <property name="geometry">
+       <rect>
+        <x>610</x>
+        <y>310</y>
+        <width>91</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">
+QPushButton {
+  background-color: rgb(212, 175, 55);
+  color: rgb(35, 37, 42);
+  font: bold 10pt &quot;Arial&quot;;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+QPushButton:hover {
+  background-color: rgb(183, 149, 11);
+}
+
+QPushButton:pressed {
+  background-color: rgb(212, 175, 55);
+  border: 1px solid rgb(160, 130, 0);
+}
+</string>
+      </property>
+      <property name="text">
+       <string>save state</string>
       </property>
      </widget>
     </widget>
